Update lists at 20241105-0000

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -195,6 +195,7 @@ deny 154.216.16.20;
 deny 154.216.16.21;
 deny 154.216.18.191;
 deny 154.26.159.157;
+deny 158.69.1.13;
 deny 160.119.249.240;
 deny 161.97.174.64;
 deny 162.210.173.17;
@@ -271,15 +272,22 @@ deny 179.43.159.199;
 deny 179.43.159.200;
 deny 179.43.159.201;
 deny 179.43.159.78;
-deny 179.43.167.197;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
 deny 184.75.221.195;
 deny 185.100.85.132;
+deny 185.100.85.22;
+deny 185.100.85.23;
+deny 185.100.85.24;
+deny 185.100.85.25;
 deny 185.100.87.136;
+deny 185.100.87.139;
 deny 185.100.87.166;
 deny 185.100.87.174;
+deny 185.100.87.192;
+deny 185.100.87.250;
+deny 185.100.87.253;
 deny 185.100.87.41;
 deny 185.10.16.41;
 deny 185.106.102.102;
@@ -353,6 +361,9 @@ deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
 deny 185.220.100.255;
+deny 185.220.101.0;
+deny 185.220.101.1;
+deny 185.220.101.10;
 deny 185.220.101.100;
 deny 185.220.101.101;
 deny 185.220.101.102;
@@ -363,9 +374,12 @@ deny 185.220.101.106;
 deny 185.220.101.107;
 deny 185.220.101.108;
 deny 185.220.101.109;
+deny 185.220.101.11;
 deny 185.220.101.110;
+deny 185.220.101.12;
 deny 185.220.101.128;
 deny 185.220.101.129;
+deny 185.220.101.13;
 deny 185.220.101.130;
 deny 185.220.101.131;
 deny 185.220.101.132;
@@ -375,6 +389,7 @@ deny 185.220.101.136;
 deny 185.220.101.137;
 deny 185.220.101.138;
 deny 185.220.101.139;
+deny 185.220.101.14;
 deny 185.220.101.140;
 deny 185.220.101.141;
 deny 185.220.101.142;
@@ -384,6 +399,7 @@ deny 185.220.101.146;
 deny 185.220.101.147;
 deny 185.220.101.148;
 deny 185.220.101.149;
+deny 185.220.101.15;
 deny 185.220.101.150;
 deny 185.220.101.151;
 deny 185.220.101.154;
@@ -391,6 +407,7 @@ deny 185.220.101.155;
 deny 185.220.101.156;
 deny 185.220.101.157;
 deny 185.220.101.158;
+deny 185.220.101.16;
 deny 185.220.101.161;
 deny 185.220.101.162;
 deny 185.220.101.163;
@@ -398,6 +415,7 @@ deny 185.220.101.164;
 deny 185.220.101.165;
 deny 185.220.101.168;
 deny 185.220.101.169;
+deny 185.220.101.17;
 deny 185.220.101.170;
 deny 185.220.101.171;
 deny 185.220.101.172;
@@ -408,6 +426,7 @@ deny 185.220.101.176;
 deny 185.220.101.177;
 deny 185.220.101.178;
 deny 185.220.101.179;
+deny 185.220.101.18;
 deny 185.220.101.182;
 deny 185.220.101.183;
 deny 185.220.101.184;
@@ -416,8 +435,23 @@ deny 185.220.101.186;
 deny 185.220.101.187;
 deny 185.220.101.188;
 deny 185.220.101.189;
+deny 185.220.101.19;
 deny 185.220.101.190;
 deny 185.220.101.191;
+deny 185.220.101.2;
+deny 185.220.101.20;
+deny 185.220.101.21;
+deny 185.220.101.22;
+deny 185.220.101.23;
+deny 185.220.101.24;
+deny 185.220.101.25;
+deny 185.220.101.26;
+deny 185.220.101.27;
+deny 185.220.101.28;
+deny 185.220.101.29;
+deny 185.220.101.3;
+deny 185.220.101.30;
+deny 185.220.101.31;
 deny 185.220.101.32;
 deny 185.220.101.33;
 deny 185.220.101.34;
@@ -426,6 +460,7 @@ deny 185.220.101.36;
 deny 185.220.101.37;
 deny 185.220.101.38;
 deny 185.220.101.39;
+deny 185.220.101.4;
 deny 185.220.101.40;
 deny 185.220.101.41;
 deny 185.220.101.42;
@@ -436,6 +471,7 @@ deny 185.220.101.46;
 deny 185.220.101.47;
 deny 185.220.101.48;
 deny 185.220.101.49;
+deny 185.220.101.5;
 deny 185.220.101.50;
 deny 185.220.101.51;
 deny 185.220.101.52;
@@ -446,6 +482,7 @@ deny 185.220.101.56;
 deny 185.220.101.57;
 deny 185.220.101.58;
 deny 185.220.101.59;
+deny 185.220.101.6;
 deny 185.220.101.60;
 deny 185.220.101.61;
 deny 185.220.101.62;
@@ -456,6 +493,7 @@ deny 185.220.101.66;
 deny 185.220.101.67;
 deny 185.220.101.68;
 deny 185.220.101.69;
+deny 185.220.101.7;
 deny 185.220.101.70;
 deny 185.220.101.71;
 deny 185.220.101.72;
@@ -466,6 +504,7 @@ deny 185.220.101.76;
 deny 185.220.101.77;
 deny 185.220.101.78;
 deny 185.220.101.79;
+deny 185.220.101.8;
 deny 185.220.101.80;
 deny 185.220.101.81;
 deny 185.220.101.82;
@@ -476,6 +515,7 @@ deny 185.220.101.86;
 deny 185.220.101.87;
 deny 185.220.101.88;
 deny 185.220.101.89;
+deny 185.220.101.9;
 deny 185.220.101.90;
 deny 185.220.101.96;
 deny 185.220.101.97;
@@ -533,7 +573,6 @@ deny 185.40.4.95;
 deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
-deny 185.59.100.55;
 deny 185.67.82.114;
 deny 185.7.33.146;
 deny 185.82.219.109;
@@ -922,7 +961,6 @@ deny 204.8.96.89;
 deny 205.185.113.180;
 deny 205.185.116.34;
 deny 205.185.117.149;
-deny 205.185.117.88;
 deny 205.185.119.35;
 deny 205.185.121.170;
 deny 205.185.123.198;
@@ -947,6 +985,10 @@ deny 212.38.189.186;
 deny 212.69.167.80;
 deny 212.73.134.204;
 deny 212.95.50.77;
+deny 213.176.66.10;
+deny 213.176.66.2;
+deny 213.176.66.6;
+deny 213.176.66.7;
 deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
@@ -1036,6 +1078,7 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
+deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
@@ -1191,6 +1234,7 @@ deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
+deny 2607:5300:201:3100::2373;
 deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::3dde;
 deny 2607:5300:205:200::4894;
@@ -1432,7 +1476,6 @@ deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:d285::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1444,6 +1487,14 @@ deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 deny 2a06:1280:bee1:2::ee12:230;
+deny 2a06:1700:0:12::1;
+deny 2a06:1700:0:12::2;
+deny 2a06:1700:0:12::3;
+deny 2a06:1700:0:12::4;
+deny 2a06:1700:0:15::1;
+deny 2a06:1700:0:15::2;
+deny 2a06:1700:0:15::3;
+deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
@@ -1475,6 +1526,10 @@ deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
+deny 2a0b:f4c2::;
+deny 2a0b:f4c2::1;
+deny 2a0b:f4c2::10;
+deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
@@ -1527,6 +1582,19 @@ deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
 deny 2a0b:f4c2:1::190;
 deny 2a0b:f4c2:1::191;
+deny 2a0b:f4c2::12;
+deny 2a0b:f4c2::13;
+deny 2a0b:f4c2::14;
+deny 2a0b:f4c2::15;
+deny 2a0b:f4c2::16;
+deny 2a0b:f4c2::17;
+deny 2a0b:f4c2::18;
+deny 2a0b:f4c2::19;
+deny 2a0b:f4c2::2;
+deny 2a0b:f4c2::20;
+deny 2a0b:f4c2::21;
+deny 2a0b:f4c2::22;
+deny 2a0b:f4c2::23;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
 deny 2a0b:f4c2:2::34;
@@ -1535,6 +1603,7 @@ deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
+deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
@@ -1545,6 +1614,7 @@ deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
+deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
@@ -1555,10 +1625,17 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
+deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
+deny 2a0b:f4c2::27;
+deny 2a0b:f4c2::28;
+deny 2a0b:f4c2::29;
+deny 2a0b:f4c2::3;
+deny 2a0b:f4c2::30;
+deny 2a0b:f4c2::31;
 deny 2a0b:f4c2:3::64;
 deny 2a0b:f4c2:3::65;
 deny 2a0b:f4c2:3::66;
@@ -1586,6 +1663,7 @@ deny 2a0b:f4c2:3::87;
 deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
+deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -1601,6 +1679,11 @@ deny 2a0b:f4c2:4::96;
 deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
+deny 2a0b:f4c2::5;
+deny 2a0b:f4c2::6;
+deny 2a0b:f4c2::7;
+deny 2a0b:f4c2::8;
+deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
@@ -1625,6 +1708,10 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:2859::1;
+deny 2a0f:9400:7e11:73bc::1;
+deny 2a0f:9400:7e11:b60::1;
+deny 2a0f:9400:7e11:ce4d::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1790,7 +1877,6 @@ deny 45.148.17.56;
 deny 45.151.122.34;
 deny 45.15.157.177;
 deny 45.154.98.26;
-deny 45.61.185.151;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1923,7 +2009,6 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
-deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
 deny 80.241.60.207;
@@ -1942,7 +2027,6 @@ deny 82.85.247.254;
 deny 83.217.208.120;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.239.46.144;
 deny 84.252.120.163;
