--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -195,6 +195,7 @@ allow 154.216.16.20;
 allow 154.216.16.21;
 allow 154.216.18.191;
 allow 154.26.159.157;
+allow 158.69.1.13;
 allow 160.119.249.240;
 allow 161.97.174.64;
 allow 162.210.173.17;
@@ -271,15 +272,22 @@ allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
-allow 179.43.167.197;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.75.221.195;
 allow 185.100.85.132;
+allow 185.100.85.22;
+allow 185.100.85.23;
+allow 185.100.85.24;
+allow 185.100.85.25;
 allow 185.100.87.136;
+allow 185.100.87.139;
 allow 185.100.87.166;
 allow 185.100.87.174;
+allow 185.100.87.192;
+allow 185.100.87.250;
+allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.102.102;
@@ -353,6 +361,9 @@ allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
 allow 185.220.100.255;
+allow 185.220.101.0;
+allow 185.220.101.1;
+allow 185.220.101.10;
 allow 185.220.101.100;
 allow 185.220.101.101;
 allow 185.220.101.102;
@@ -363,9 +374,12 @@ allow 185.220.101.106;
 allow 185.220.101.107;
 allow 185.220.101.108;
 allow 185.220.101.109;
+allow 185.220.101.11;
 allow 185.220.101.110;
+allow 185.220.101.12;
 allow 185.220.101.128;
 allow 185.220.101.129;
+allow 185.220.101.13;
 allow 185.220.101.130;
 allow 185.220.101.131;
 allow 185.220.101.132;
@@ -375,6 +389,7 @@ allow 185.220.101.136;
 allow 185.220.101.137;
 allow 185.220.101.138;
 allow 185.220.101.139;
+allow 185.220.101.14;
 allow 185.220.101.140;
 allow 185.220.101.141;
 allow 185.220.101.142;
@@ -384,6 +399,7 @@ allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
+allow 185.220.101.15;
 allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.154;
@@ -391,6 +407,7 @@ allow 185.220.101.155;
 allow 185.220.101.156;
 allow 185.220.101.157;
 allow 185.220.101.158;
+allow 185.220.101.16;
 allow 185.220.101.161;
 allow 185.220.101.162;
 allow 185.220.101.163;
@@ -398,6 +415,7 @@ allow 185.220.101.164;
 allow 185.220.101.165;
 allow 185.220.101.168;
 allow 185.220.101.169;
+allow 185.220.101.17;
 allow 185.220.101.170;
 allow 185.220.101.171;
 allow 185.220.101.172;
@@ -408,6 +426,7 @@ allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
+allow 185.220.101.18;
 allow 185.220.101.182;
 allow 185.220.101.183;
 allow 185.220.101.184;
@@ -416,8 +435,23 @@ allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
+allow 185.220.101.19;
 allow 185.220.101.190;
 allow 185.220.101.191;
+allow 185.220.101.2;
+allow 185.220.101.20;
+allow 185.220.101.21;
+allow 185.220.101.22;
+allow 185.220.101.23;
+allow 185.220.101.24;
+allow 185.220.101.25;
+allow 185.220.101.26;
+allow 185.220.101.27;
+allow 185.220.101.28;
+allow 185.220.101.29;
+allow 185.220.101.3;
+allow 185.220.101.30;
+allow 185.220.101.31;
 allow 185.220.101.32;
 allow 185.220.101.33;
 allow 185.220.101.34;
@@ -426,6 +460,7 @@ allow 185.220.101.36;
 allow 185.220.101.37;
 allow 185.220.101.38;
 allow 185.220.101.39;
+allow 185.220.101.4;
 allow 185.220.101.40;
 allow 185.220.101.41;
 allow 185.220.101.42;
@@ -436,6 +471,7 @@ allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
+allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
@@ -446,6 +482,7 @@ allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
 allow 185.220.101.59;
+allow 185.220.101.6;
 allow 185.220.101.60;
 allow 185.220.101.61;
 allow 185.220.101.62;
@@ -456,6 +493,7 @@ allow 185.220.101.66;
 allow 185.220.101.67;
 allow 185.220.101.68;
 allow 185.220.101.69;
+allow 185.220.101.7;
 allow 185.220.101.70;
 allow 185.220.101.71;
 allow 185.220.101.72;
@@ -466,6 +504,7 @@ allow 185.220.101.76;
 allow 185.220.101.77;
 allow 185.220.101.78;
 allow 185.220.101.79;
+allow 185.220.101.8;
 allow 185.220.101.80;
 allow 185.220.101.81;
 allow 185.220.101.82;
@@ -476,6 +515,7 @@ allow 185.220.101.86;
 allow 185.220.101.87;
 allow 185.220.101.88;
 allow 185.220.101.89;
+allow 185.220.101.9;
 allow 185.220.101.90;
 allow 185.220.101.96;
 allow 185.220.101.97;
@@ -533,7 +573,6 @@ allow 185.40.4.95;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
-allow 185.59.100.55;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -922,7 +961,6 @@ allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
-allow 205.185.117.88;
 allow 205.185.119.35;
 allow 205.185.121.170;
 allow 205.185.123.198;
@@ -947,6 +985,10 @@ allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
+allow 213.176.66.10;
+allow 213.176.66.2;
+allow 213.176.66.6;
+allow 213.176.66.7;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -1036,6 +1078,7 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -1191,6 +1234,7 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
+allow 2607:5300:201:3100::2373;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
@@ -1432,7 +1476,6 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1444,6 +1487,14 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 allow 2a06:1280:bee1:2::ee12:230;
+allow 2a06:1700:0:12::1;
+allow 2a06:1700:0:12::2;
+allow 2a06:1700:0:12::3;
+allow 2a06:1700:0:12::4;
+allow 2a06:1700:0:15::1;
+allow 2a06:1700:0:15::2;
+allow 2a06:1700:0:15::3;
+allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -1475,6 +1526,10 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
+allow 2a0b:f4c2::;
+allow 2a0b:f4c2::1;
+allow 2a0b:f4c2::10;
+allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
@@ -1527,6 +1582,19 @@ allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
+allow 2a0b:f4c2::12;
+allow 2a0b:f4c2::13;
+allow 2a0b:f4c2::14;
+allow 2a0b:f4c2::15;
+allow 2a0b:f4c2::16;
+allow 2a0b:f4c2::17;
+allow 2a0b:f4c2::18;
+allow 2a0b:f4c2::19;
+allow 2a0b:f4c2::2;
+allow 2a0b:f4c2::20;
+allow 2a0b:f4c2::21;
+allow 2a0b:f4c2::22;
+allow 2a0b:f4c2::23;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -1535,6 +1603,7 @@ allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
+allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
@@ -1545,6 +1614,7 @@ allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
+allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
@@ -1555,10 +1625,17 @@ allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
+allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
+allow 2a0b:f4c2::27;
+allow 2a0b:f4c2::28;
+allow 2a0b:f4c2::29;
+allow 2a0b:f4c2::3;
+allow 2a0b:f4c2::30;
+allow 2a0b:f4c2::31;
 allow 2a0b:f4c2:3::64;
 allow 2a0b:f4c2:3::65;
 allow 2a0b:f4c2:3::66;
@@ -1586,6 +1663,7 @@ allow 2a0b:f4c2:3::87;
 allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
+allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
@@ -1601,6 +1679,11 @@ allow 2a0b:f4c2:4::96;
 allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
+allow 2a0b:f4c2::5;
+allow 2a0b:f4c2::6;
+allow 2a0b:f4c2::7;
+allow 2a0b:f4c2::8;
+allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -1625,6 +1708,10 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:2859::1;
+allow 2a0f:9400:7e11:73bc::1;
+allow 2a0f:9400:7e11:b60::1;
+allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1790,7 +1877,6 @@ allow 45.148.17.56;
 allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.154.98.26;
-allow 45.61.185.151;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1923,7 +2009,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1942,7 +2027,6 @@ allow 82.85.247.254;
 allow 83.217.208.120;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
