--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -254,6 +254,7 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
+allow 2607:5300:201:3100::2373;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
@@ -494,7 +495,6 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -506,6 +506,14 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 allow 2a06:1280:bee1:2::ee12:230;
+allow 2a06:1700:0:12::1;
+allow 2a06:1700:0:12::2;
+allow 2a06:1700:0:12::3;
+allow 2a06:1700:0:12::4;
+allow 2a06:1700:0:15::1;
+allow 2a06:1700:0:15::2;
+allow 2a06:1700:0:15::3;
+allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -537,6 +545,10 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
+allow 2a0b:f4c2::;
+allow 2a0b:f4c2::1;
+allow 2a0b:f4c2::10;
+allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
@@ -589,6 +601,19 @@ allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
+allow 2a0b:f4c2::12;
+allow 2a0b:f4c2::13;
+allow 2a0b:f4c2::14;
+allow 2a0b:f4c2::15;
+allow 2a0b:f4c2::16;
+allow 2a0b:f4c2::17;
+allow 2a0b:f4c2::18;
+allow 2a0b:f4c2::19;
+allow 2a0b:f4c2::2;
+allow 2a0b:f4c2::20;
+allow 2a0b:f4c2::21;
+allow 2a0b:f4c2::22;
+allow 2a0b:f4c2::23;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -597,6 +622,7 @@ allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
+allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
@@ -607,6 +633,7 @@ allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
+allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
@@ -617,10 +644,17 @@ allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
+allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
+allow 2a0b:f4c2::27;
+allow 2a0b:f4c2::28;
+allow 2a0b:f4c2::29;
+allow 2a0b:f4c2::3;
+allow 2a0b:f4c2::30;
+allow 2a0b:f4c2::31;
 allow 2a0b:f4c2:3::64;
 allow 2a0b:f4c2:3::65;
 allow 2a0b:f4c2:3::66;
@@ -648,6 +682,7 @@ allow 2a0b:f4c2:3::87;
 allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
+allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
@@ -663,6 +698,11 @@ allow 2a0b:f4c2:4::96;
 allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
+allow 2a0b:f4c2::5;
+allow 2a0b:f4c2::6;
+allow 2a0b:f4c2::7;
+allow 2a0b:f4c2::8;
+allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -687,6 +727,10 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:2859::1;
+allow 2a0f:9400:7e11:73bc::1;
+allow 2a0f:9400:7e11:b60::1;
+allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
