--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -254,6 +254,7 @@ deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
+deny 2607:5300:201:3100::2373;
 deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::3dde;
 deny 2607:5300:205:200::4894;
@@ -494,7 +495,6 @@ deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:d285::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -506,6 +506,14 @@ deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 deny 2a06:1280:bee1:2::ee12:230;
+deny 2a06:1700:0:12::1;
+deny 2a06:1700:0:12::2;
+deny 2a06:1700:0:12::3;
+deny 2a06:1700:0:12::4;
+deny 2a06:1700:0:15::1;
+deny 2a06:1700:0:15::2;
+deny 2a06:1700:0:15::3;
+deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
@@ -537,6 +545,10 @@ deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
+deny 2a0b:f4c2::;
+deny 2a0b:f4c2::1;
+deny 2a0b:f4c2::10;
+deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
@@ -589,6 +601,19 @@ deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
 deny 2a0b:f4c2:1::190;
 deny 2a0b:f4c2:1::191;
+deny 2a0b:f4c2::12;
+deny 2a0b:f4c2::13;
+deny 2a0b:f4c2::14;
+deny 2a0b:f4c2::15;
+deny 2a0b:f4c2::16;
+deny 2a0b:f4c2::17;
+deny 2a0b:f4c2::18;
+deny 2a0b:f4c2::19;
+deny 2a0b:f4c2::2;
+deny 2a0b:f4c2::20;
+deny 2a0b:f4c2::21;
+deny 2a0b:f4c2::22;
+deny 2a0b:f4c2::23;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
 deny 2a0b:f4c2:2::34;
@@ -597,6 +622,7 @@ deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
+deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
@@ -607,6 +633,7 @@ deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
+deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
@@ -617,10 +644,17 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
+deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
+deny 2a0b:f4c2::27;
+deny 2a0b:f4c2::28;
+deny 2a0b:f4c2::29;
+deny 2a0b:f4c2::3;
+deny 2a0b:f4c2::30;
+deny 2a0b:f4c2::31;
 deny 2a0b:f4c2:3::64;
 deny 2a0b:f4c2:3::65;
 deny 2a0b:f4c2:3::66;
@@ -648,6 +682,7 @@ deny 2a0b:f4c2:3::87;
 deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
+deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -663,6 +698,11 @@ deny 2a0b:f4c2:4::96;
 deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
+deny 2a0b:f4c2::5;
+deny 2a0b:f4c2::6;
+deny 2a0b:f4c2::7;
+deny 2a0b:f4c2::8;
+deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
@@ -687,6 +727,10 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:2859::1;
+deny 2a0f:9400:7e11:73bc::1;
+deny 2a0f:9400:7e11:b60::1;
+deny 2a0f:9400:7e11:ce4d::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
