--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -291,7 +291,6 @@ allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.102.102;
-allow 185.106.94.195;
 allow 185.107.57.64;
 allow 185.107.57.65;
 allow 185.107.57.66;
@@ -669,7 +668,6 @@ allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
-allow 193.233.133.109;
 allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
@@ -995,7 +993,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.197.107.138;
 allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -1476,6 +1473,7 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1508,7 +1506,6 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-allow 2a0b:4140:c333::2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1735,14 +1732,7 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
-allow 2a12:5940:13e2::2;
-allow 2a12:5940:144f::2;
-allow 2a12:5940:52c2::2;
-allow 2a12:5940:9101::2;
-allow 2a12:5940:b4db::2;
-allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
@@ -1875,7 +1865,6 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.148.17.56;
 allow 45.151.122.34;
-allow 45.15.157.177;
 allow 45.154.98.26;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1909,7 +1898,6 @@ allow 45.95.169.226;
 allow 45.95.169.227;
 allow 45.95.169.228;
 allow 45.95.169.229;
-allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.232.251.191;
@@ -1928,7 +1916,6 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.33.188;
 allow 5.181.80.107;
-allow 5.182.86.212;
 allow 51.89.138.51;
 allow 51.89.153.112;
 allow 51.91.18.151;
@@ -1936,6 +1923,7 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1964,10 +1952,6 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 5.42.80.232;
-allow 5.42.80.233;
-allow 5.42.80.234;
-allow 5.42.80.235;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.209.253;
@@ -1990,26 +1974,13 @@ allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
-allow 77.105.146.42;
 allow 77.220.196.253;
-allow 77.221.142.194;
-allow 77.221.152.105;
-allow 77.221.157.237;
-allow 77.221.159.184;
-allow 77.221.159.189;
-allow 77.221.159.192;
-allow 77.221.159.193;
-allow 77.221.159.75;
 allow 77.37.3.7;
 allow 77.48.28.236;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
-allow 77.91.85.147;
-allow 77.91.86.95;
-allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -2027,6 +1998,7 @@ allow 82.85.247.254;
 allow 83.217.208.120;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
@@ -2051,14 +2023,12 @@ allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
-allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
-allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
 allow 91.202.5.104;
@@ -2102,7 +2072,6 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.228.163.25;
-allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.232.43.221;
