--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -495,6 +495,7 @@ deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:d285::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -527,7 +528,6 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-deny 2a0b:4140:c333::2;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
@@ -754,14 +754,7 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
-deny 2a12:5940:13e2::2;
-deny 2a12:5940:144f::2;
-deny 2a12:5940:52c2::2;
-deny 2a12:5940:9101::2;
-deny 2a12:5940:b4db::2;
-deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c826::2;
-deny 2a12:5940:f0a8::2;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
