--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -196,7 +196,6 @@ allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -225,7 +224,6 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
-allow 172.104.164.133;
 allow 172.104.176.218;
 allow 172.104.243.155;
 allow 172.105.161.162;
@@ -750,7 +748,6 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:4ba0:fff8:120::1;
 allow 2001:620:20d0::23;
@@ -1036,7 +1033,6 @@ allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.137.248.100;
-allow 23.137.248.149;
 allow 23.137.248.152;
 allow 23.137.250.83;
 allow 23.137.253.108;
@@ -1080,7 +1076,6 @@ allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.13;
 allow 23.94.211.25;
-allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:95ff:fe5d:2041;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1108,7 +1103,6 @@ allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
-allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1704,6 +1698,7 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1824,6 +1819,7 @@ allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -2019,6 +2015,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
+allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -2026,6 +2023,7 @@ allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
 allow 91.139.160.150;
+allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.145.116;
 allow 91.206.26.26;
@@ -2043,7 +2041,6 @@ allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.223.2.183;
-allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.113.25.221;
