--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -196,7 +196,6 @@ set_real_ip_from 154.216.18.191;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 158.69.1.13;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 161.97.174.64;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
@@ -225,7 +224,6 @@ set_real_ip_from 171.25.193.77;
 set_real_ip_from 171.25.193.78;
 set_real_ip_from 171.25.193.79;
 set_real_ip_from 171.25.193.80;
-set_real_ip_from 172.104.164.133;
 set_real_ip_from 172.104.176.218;
 set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.161.162;
@@ -750,7 +748,6 @@ set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
-set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:4ba0:fff8:120::1;
 set_real_ip_from 2001:620:20d0::23;
@@ -1036,7 +1033,6 @@ set_real_ip_from 23.129.64.228;
 set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
-set_real_ip_from 23.137.248.149;
 set_real_ip_from 23.137.248.152;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
@@ -1080,7 +1076,6 @@ set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.173.216.67;
 set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.94.211.25;
-set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
 set_real_ip_from 2400:8901::f03c:95ff:fe5d:2041;
 set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1108,7 +1103,6 @@ set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
-set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1704,6 +1698,7 @@ set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:9400:7e11:2859::1;
 set_real_ip_from 2a0f:9400:7e11:73bc::1;
+set_real_ip_from 2a0f:9400:7e11:8ba1::1;
 set_real_ip_from 2a0f:9400:7e11:b60::1;
 set_real_ip_from 2a0f:9400:7e11:ce4d::1;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1824,6 +1819,7 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.180.27;
 set_real_ip_from 45.137.205.138;
 set_real_ip_from 45.137.205.140;
 set_real_ip_from 45.138.16.107;
@@ -2019,6 +2015,7 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.187.143.31;
+set_real_ip_from 89.213.174.212;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
@@ -2026,6 +2023,7 @@ set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
+set_real_ip_from 91.193.18.63;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.203.145.116;
 set_real_ip_from 91.206.26.26;
@@ -2043,7 +2041,6 @@ set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.223.2.183;
-set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.221;
