Update lists at 20241106-0900

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -106,7 +106,6 @@ set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.16.251;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
-set_real_ip_from 108.61.158.147;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.69.67.17;
@@ -183,10 +182,6 @@ set_real_ip_from 154.213.184.87;
 set_real_ip_from 154.213.184.9;
 set_real_ip_from 154.213.184.90;
 set_real_ip_from 154.213.184.93;
-set_real_ip_from 154.213.185.133;
-set_real_ip_from 154.213.185.165;
-set_real_ip_from 154.213.185.183;
-set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.216.16.13;
@@ -311,7 +306,6 @@ set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.132.53.12;
 set_real_ip_from 185.142.239.49;
-set_real_ip_from 185.149.146.193;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
@@ -720,7 +714,6 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.7.140.230;
-set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -938,7 +931,6 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
-set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
@@ -1263,10 +1255,6 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
-set_real_ip_from 2a05:b0c7:6388::1;
-set_real_ip_from 2a05:b0c7:67c6::1;
-set_real_ip_from 2a05:b0c7:6949::1;
-set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
@@ -1481,7 +1469,6 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
-set_real_ip_from 2a0e:97c0:3e3:50b::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
@@ -1490,6 +1477,7 @@ set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:9400:7e11:2859::1;
 set_real_ip_from 2a0f:9400:7e11:73bc::1;
+set_real_ip_from 2a0f:9400:7e11:8ba1::1;
 set_real_ip_from 2a0f:9400:7e11:b60::1;
 set_real_ip_from 2a0f:9400:7e11:ce4d::1;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1600,7 +1588,6 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
-set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1609,6 +1596,7 @@ set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.180.27;
 set_real_ip_from 45.137.205.138;
 set_real_ip_from 45.137.205.140;
 set_real_ip_from 45.138.16.107;
@@ -1806,6 +1794,7 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.187.143.31;
+set_real_ip_from 89.213.174.212;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
@@ -1830,6 +1819,7 @@ set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.223.2.183;
+set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.189;
