--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -106,7 +106,6 @@ allow 108.181.124.143;
 allow 108.181.16.251;
 allow 108.181.27.205;
 allow 108.181.69.243;
-allow 108.61.158.147;
 allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.69.67.17;
@@ -183,10 +182,6 @@ allow 154.213.184.87;
 allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
-allow 154.213.185.133;
-allow 154.213.185.165;
-allow 154.213.185.183;
-allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.216.16.13;
@@ -311,7 +306,6 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.142.239.49;
-allow 185.149.146.193;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -720,7 +714,6 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.7.140.230;
-allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -938,7 +931,6 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
-allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1263,10 +1255,6 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
-allow 2a05:b0c7:6388::1;
-allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1481,7 +1469,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
-allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
@@ -1490,6 +1477,7 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1600,7 +1588,6 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1609,6 +1596,7 @@ allow 45.129.84.246;
 allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1806,6 +1794,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
+allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -1830,6 +1819,7 @@ allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.223.2.183;
+allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.113.25.189;
