--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -393,10 +392,6 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
-deny 2a05:b0c7:6388::1;
-deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -611,7 +606,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
-deny 2a0e:97c0:3e3:50b::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
@@ -620,6 +614,7 @@ deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:2859::1;
 deny 2a0f:9400:7e11:73bc::1;
+deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:9400:7e11:b60::1;
 deny 2a0f:9400:7e11:ce4d::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
