--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -248,6 +248,7 @@ allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.148.209;
+allow 178.175.148.246;
 allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
@@ -279,6 +280,7 @@ allow 185.100.87.136;
 allow 185.100.87.139;
 allow 185.100.87.166;
 allow 185.100.87.174;
+allow 185.100.87.183;
 allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
@@ -310,6 +312,7 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.142.239.49;
+allow 185.146.232.234;
 allow 185.149.146.193;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -969,7 +972,6 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
-allow 23.184.48.13;
 allow 23.94.211.25;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -999,7 +1001,6 @@ allow 2602:2e6:0:4::;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1176,6 +1177,7 @@ allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
+allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
@@ -1255,6 +1257,7 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
+allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
@@ -1481,12 +1484,10 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
-allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
-allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
@@ -1600,7 +1601,6 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1716,6 +1716,7 @@ allow 5.255.118.218;
 allow 5.255.118.244;
 allow 5.255.120.205;
 allow 5.255.121.71;
+allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.124.150;
 allow 5.255.125.41;
@@ -1746,7 +1747,6 @@ allow 62.182.84.146;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
-allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
