--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -130,7 +130,6 @@ allow 2602:2e6:0:4::;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -306,6 +305,7 @@ allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
+allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
@@ -385,6 +385,7 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
+allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
@@ -611,12 +612,10 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
-allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
-allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
