Update lists at 20241107-0000

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -317,6 +317,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
+allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -620,6 +621,7 @@ allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
+allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
@@ -647,6 +649,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
