--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -317,6 +317,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.170.114.25;
 deny 185.183.157.214;
 deny 185.183.159.40;
@@ -678,6 +679,7 @@ deny 194.233.174.56;
 deny 194.26.192.161;
 deny 194.26.192.72;
 deny 194.26.192.77;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.179.231.215;
@@ -1189,6 +1191,7 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
+deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1492,6 +1495,7 @@ deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
+deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:2859::1;
 deny 2a0f:9400:7e11:73bc::1;
@@ -1519,6 +1523,7 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
@@ -1591,6 +1596,7 @@ deny 2a12:dd47:8513::e;
 deny 2a12:dd47:8513::f;
 deny 2a13:d207:0:461::1;
 deny 31.129.22.65;
+deny 31.13.195.22;
 deny 31.133.0.210;
 deny 31.220.75.237;
 deny 31.42.185.135;
@@ -1707,7 +1713,6 @@ deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1751,6 +1756,7 @@ deny 62.182.84.146;
 deny 64.227.115.78;
 deny 66.146.193.33;
 deny 66.220.242.222;
+deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
@@ -1778,7 +1784,6 @@ deny 82.153.138.119;
 deny 8.218.9.41;
 deny 82.221.128.191;
 deny 82.221.131.5;
-deny 82.221.139.190;
 deny 82.68.49.227;
 deny 82.85.247.254;
 deny 83.217.9.73;
@@ -1868,6 +1873,7 @@ deny 94.72.98.8;
 deny 95.128.43.164;
 deny 95.142.161.63;
 deny 95.143.193.125;
+deny 95.216.107.148;
 deny 96.126.98.146;
 deny 96.66.15.152;
 deny 98.128.173.33;
